--- a/base-libs/build.gradle
+++ b/base-libs/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'org.greenrobot.greendao' // greenDao数据库 plugin
 
 android {
     compileSdkVersion 27
@@ -25,6 +26,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    greendao{
+        //指定数据库schema版本号，迁移等操作会用到;
+        schemaVersion 1
+        //dao的包名，包名默认是entity所在的包；
+        daoPackage 'com.greendao.gen'
+        //生成数据库文件的目录;
+        targetGenDir 'src/main/java'
+    }
+
 }
 
 dependencies {
@@ -78,4 +89,6 @@ dependencies {
     //下拉刷新
     api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14'
 //    api 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-14'//没有使用特殊Header，可以不加这行
+
+
 }
